Bug 902532: Use NS_CopyNativeToUnicode to convert dictionary filename to UTF-16 on Windows. r=ehsan a=bajaj